fix: fix align titles

--- a/root/web/static/css/main.css
+++ b/root/web/static/css/main.css
@@ -441,6 +441,7 @@ body {
   margin-bottom: 4px;
   margin-left: 26px;
   display: flex;
+  justify-content: center;
   gap: 16px;
 }
 
